syntax = "proto3";

enum PB_RequestCode{
	LOGIN = 0;
	MATCH = 1;
	MATCH_CANCLE = 2;
	BATTLE_READY = 3;
	UP_PLAYER_OPERATION = 4;
	REQUEST_LACK_FRAMES = 5;
	REQUEST_GAME_OVER = 6;
	RECONNECT = 7;
}

enum PB_ResponseCode{
	LOGIN_RESPONSE = 0;
	MATCH_RESPONSE = 1;
	MATCH_CANCLE_RESPONSE = 2;
	BATTLE_ENTER = 3;
	BATTLE_START = 4;
	DOWN_PLAYER_OPERATIONS = 5;
	RESPONSE_LACK_FRAMES = 6;
	RESPONSE_GAME_OVER = 7;
	RECONNECT_RESPONSE = 8;
}